finished quote and the sign up section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="herotext">
             <div class="bigtext">This website is awesome</div>
             <div class="smalltext">this website is very awesome very baller</div>
-            <button class="signupbutton1">Sign up</button>
+            <button>Sign up</button>
         </div> 
         <img class="heroimg" src="./images/guy.jpg" alt="a guy">
     </div>
@@ -45,16 +45,21 @@
         </div>
     </div>
     <div class="quote">
-        <div class="quotetext">
-            "How long are you going to keep running, Simon? Now is the time to cast off the boy you used to be."
-            <div class="quotename">- Kamina the goat</div>
-        </div>
-        
+        <div class="quotebox">
+            <div class="quotetext">
+                "Don't be distracted by the what-if's, should-have's, and if-only's. The one thing you choose for yourself - that is the truth of your universe"
+                <div class="quotename">- Kamina the goat</div>
+            </div>
+        </div>    
     </div>
     <div class="signupheader">
-        <div class="signtext">This website is awesome</div>
-        <div class="signtextsmall">this website is very awesome very baller</div>
-        <button class="signupbuttonhead">Sign up</button>
+        <div class="signupbox">
+            <div class="signtext">
+                <div class="signtextbig">This website is awesome</div>
+                <div class="signtextsmall">this website is very awesome very baller</div>
+            </div>
+            <button class="signupbuttonhead">Sign up</button>
+        </div>
     </div>
     <div class="footer">Copyright C The odin project 2023</div>
 </body>
