added a real banger

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="javascript.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -46,7 +47,9 @@
     </div>
     <div class="quote">
         <div class="quotebox">
-            <div class="quotetext">
+            <button type="button" onclick="myFunction()">Try it</button>
+            <div class="quotetext" id="demo">
+
                 "Don't be distracted by the what-if's, should-have's, and if-only's. The one thing you choose for yourself - that is the truth of your universe"
                 <div class="quotename">- Kamina the goat</div>
             </div>
